# Event-Identification-Using-TMVA

./: CMakeLists.txt  CompId.cc  README.md
TMVA/: Application.C  EventClassification.C  FirstHalfStatistics.C  RESRegressionFinal.C  SecondHalfStatistics.C
include/: DR_GenerallStructs.hh  EventIdentification.txt  InputReader.hh  InputReaderGeant.hh  LinkDef.h  Structinclude.hh
source/: readme.txt
source/include/: EIComp.hh  readme.txt
source/results/: EI.txt
source/src/: EIComp.cc  InputReader.cc  InputReaderGeant.cc  readme.txt
